--- a/stage1/stage1p.css
+++ b/stage1/stage1p.css
@@ -1,42 +1,53 @@
+/* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
 
-*{
+/* Reset default margin and padding for all elements */
+* {
     margin: 0px;
     padding: 0px;
 }
-body{
-    background-image: url(/assets/prison\ door.jpg);
+
+/* Styling for the body element */
+body {
+    /* Set the background image and specify its behavior */
+    background-image: url(./../assets/opened\ prison.jpg);
+    /* background-color: black; */
     background-repeat: no-repeat;
     background-size: 100% 100vh;
 }
-#message{
+
+/* Styling for the message element */
+#message {
     position: relative;
-    /* Rectangle 4 */
-left: 30vh;
-top: -10vh;
+    left: 30vh;
+    top: -10vh;
     width: 340px;
     height: 138px;
     background: rgba(217, 217, 217, 0.86);
     filter: blur(8px);
     border-radius: 45px;
-
 }
-p{
+
+/* Styling for paragraph elements */
+p {
     position: relative;
     width: 700px;
     font-family: 'Aclonica', sans-serif;
     left: 32vh;
     top: -22vh;
     font-size: 15px;
-
 }
-button:hover{
-    transform: scale3d(1.1,1.1,1.1);
+
+/* Styling for button elements on hover */
+button:hover {
+    transform: scale3d(1.1, 1.1, 1.1);
     background-color: red;
     box-shadow: 2px 6px 5px 0px black;
 }
-button{
+
+/* Styling for button elements */
+button {
     position: absolute;
     width: 182px;
     height: 59px;
@@ -45,24 +56,20 @@ button{
     border: none;
     color: white;
     font-size: 30px;
-    font-family: 'Anton',sans-serif;
+    font-family: 'Anton', sans-serif;
     left: 135vh;
     top: 80vh;
-
 }
-#franklin{
+
+/* Styling for the "franklin" element */
+#franklin {
     height: 300px;
     position: relative;
     left: 10vh;
     top: 35vh;
 }
-#black{
-    background-color: rgb(32, 31, 31);
-    width: 285px;
-    height: 382px;
-    position: absolute;
-    left: 78vh;
-    top: 27vh;
 
-    border-radius: 20px;
+/* Initially hide the paragraphs, images, message, and buttons */
+p, img, #message, button {
+    visibility: hidden;
 }
