--- a/stage1/stage1ta.css
+++ b/stage1/stage1ta.css
@@ -1,16 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
 
-*{
+/* Resetting default margins and paddings */
+* {
     margin: 0px;
     padding: 0px;
 }
-body{
+
+/* Styling for the background */
+body {
     background-image: url(/assets/prison\ door.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100vh;
 }
-#message{
+
+/* Styling for the message container */
+#message {
     position: absolute;
     /* Rectangle 4 */
 
@@ -21,24 +26,29 @@ body{
     background: rgba(217, 217, 217, 0.86);
     filter: blur(8px);
     border-radius: 45px;
-
 }
-p{
+
+/* Styling for the message text */
+p {
     position: absolute;
     width: 800px;
     font-family: 'Aclonica', sans-serif;
-   margin-top: 160px;
+    margin-top: 160px;
     margin-left: 20px;
     font-size: 20px;
     left: 270px;
     top: 180px;
 }
-button:hover{
-    transform: scale3d(1.1,1.1,1.1);
+
+/* Styling for the "TRY AGAIN" button on hover */
+button:hover {
+    transform: scale3d(1.1, 1.1, 1.1);
     background-color: red;
     box-shadow: 2px 6px 5px 0px black;
 }
-button{
+
+/* Styling for the "TRY AGAIN" button */
+button {
     position: absolute;
     width: 182px;
     height: 59px;
@@ -50,9 +60,9 @@ button{
     border: none;
     color: white;
     font-size: 20px;
-    font-family: 'Anton',sans-serif;
+    font-family: 'Anton', sans-serif;
 }
-#franklin{
+#franklin {
     height: 300px;
     position: absolute;
     margin-left: 100px;
