--- a/stage2/stage2p.css
+++ b/stage2/stage2p.css
@@ -1,41 +1,52 @@
+/* CSS for styling the second stage */
+
+/* Importing fonts from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
 
-*{
+/* Resetting default margin and padding for all elements */
+* {
     margin: 0px;
     padding: 0px;
 }
-body{
+
+/* Styling the background of the body */
+body {
     background-image: url(/assets/library.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100vh;
 }
-#message{
-    position: absolute;
-    /* Rectangle 4 */
 
+/* Styling the message container */
+#message {
+    position: absolute;
     width: 700px;
     height: 148px;
-    left: 490px;
+    left: 540px;
     top: 100px;
     background: rgba(217, 217, 217, 0.86);
     filter: blur(8px);
     border-radius: 45px;
-
 }
-p{
+
+/* Styling the text content within the message container */
+p {
     position: relative;
     width: 800px;
     font-family: 'Aclonica', sans-serif;
-    left: 515px;
-    top: 140px;
+    left: 590px;
+    top: 150px;
 }
-button:hover{
-    transform: scale3d(1.1,1.1,1.1);
+
+/* Styling the "NEXT" button on hover */
+button:hover {
+    transform: scale3d(1.1, 1.1, 1.1);
     background-color: red;
     box-shadow: 2px 6px 5px 0px black;
 }
-button{
+
+/* Styling the "NEXT" button */
+button {
     position: absolute;
     width: 182px;
     height: 59px;
@@ -47,17 +58,22 @@ button{
     border: none;
     color: white;
     font-size: 30px;
-    font-family: 'Anton',sans-serif;
+    font-family: 'Anton', sans-serif;
 }
-#franklin{
+
+/* Styling the image of Franklin */
+#franklin {
     height: 300px;
     position: absolute;
-    margin-left: 320px;
-    margin-top: 190px;
+    margin-left: 470px;
+    margin-top: 250px;
 }
-#map{   
+
+/* Styling the map image (initially hidden) */
+#map {
     width: 200px;
     position: absolute;
     top: 350px;
     left: 760px;
+    visibility: hidden;
 }
