--- a/stage3/stage3.css
+++ b/stage3/stage3.css
@@ -1,21 +1,31 @@
+/* CSS for styling the third stage */
+
+/* Importing fonts from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
 
-*{
+/* Resetting default margin and padding for all elements */
+* {
     margin: 0px;
     padding: 0px;
 }
-body{
+
+/* Styling the background of the body */
+body {
     background-image: url(/assets/snakeroom.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100vh;
 }
-img{
+
+/* Styling the image */
+img {
     position: absolute;
     left: 100px;
     top: 200px;
 }
-#container{
+
+/* Styling the message container */
+#container {
     position: absolute;
     width: 700px;
     height: 148px;
@@ -25,15 +35,19 @@ img{
     filter: blur(8px);
     border-radius: 45px;
 }
-p{
+
+/* Styling the text content within the message container */
+p {
     position: relative;
-    font-family: 'Aclonica',sans-serif;
+    font-family: 'Aclonica', sans-serif;
     font-size: 16px;
     left: 620px;
     top: 180px;
     width: 600px;
 }
-#answer{
+
+/* Styling the answer input field */
+#answer {
     width: 200px;
     height: 40px;
     position: absolute;
@@ -43,25 +57,28 @@ p{
     border: none;
     border-radius: 20px;
     text-align: center;
-}
-button:hover{
-        transform: scale3d(1.1,1.1,1.1);
-        background-color: red;
-        box-shadow: 2px 6px 5px 0px black;
-}
-button{
-        position: absolute;
-        width: 182px;
-        height: 59px;
-        margin-left: 1120px;
-        margin-top: 150px;
-        top: 450px;
-        background: rgba(255, 0, 0, 0);
-        border-radius: 20px;
-        border: none;
-        color: white;
-        font-size: 30px;
-        font-family: 'Anton',sans-serif;
+    outline: none;
 }
 
+/* Styling the submit button on hover */
+button:hover {
+    transform: scale3d(1.1, 1.1, 1.1);
+    background-color: red;
+    box-shadow: 2px 6px 5px 0px black;
+}
 
+/* Styling the submit button */
+button {
+    position: absolute;
+    width: 182px;
+    height: 59px;
+    margin-left: 1120px;
+    margin-top: 150px;
+    top: 450px;
+    background: rgba(255, 0, 0, 0);
+    border-radius: 20px;
+    border: none;
+    color: white;
+    font-size: 30px;
+    font-family: 'Anton', sans-serif;
+}
