--- a/stage4/stage4.css
+++ b/stage4/stage4.css
@@ -4,7 +4,7 @@
     padding: 0px;
 }
 body{
-    background-image: url(/assets/cave02-1024x683.png);
+    background-image: url(./../assets/cave02-1024x683.png);
     background-size: 100% 100vh;
     background-repeat: no-repeat;
 }
