--- a/stage4/stage4intro.css
+++ b/stage4/stage4intro.css
@@ -5,7 +5,7 @@
     padding: 0px;
 }
 body{
-    background-image: url(/assets/basement.jpg);
+    background-image: url(./assets/basement.jpg);
     background-size: 100% 100vh;
     background-repeat: no-repeat;
 }
