--- a/stage3/stage3ta.css
+++ b/stage3/stage3ta.css
@@ -11,7 +11,7 @@
 
 /* Styling the body background image */
 body {
-    background-image: url(./assets/snakeroom.jpg);
+    background-image: url(./../assets/snakeroom.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100vh;
     display: flex;
