--- a/stage1/stage1_intro.css
+++ b/stage1/stage1_intro.css
@@ -9,7 +9,7 @@
 
 /* Styling for the background */
 body {
-    background-image: url(./assets/prison\ door.jpg);
+    background-image: url(./../assets/prison\ door.jpg);
     background-size: 100% 100vh;
     background-repeat: no-repeat;
 }
