--- a/stage2/Stage2.css
+++ b/stage2/Stage2.css
@@ -5,7 +5,7 @@
     padding: 0px;
 }
 body{
-    background-image: url(./assets/library.jpg);
+    background-image: url(./../assets/library.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100vh;
 
