--- a/stage2/stage2ta.css
+++ b/stage2/stage2ta.css
@@ -12,7 +12,7 @@
 
 /* Styling the background of the body */
 body {
-    background-image: url(./assets/library.jpg);
+    background-image: url(./../assets/library.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100vh;
 }
