--- a/stage4/stage4intro2.css
+++ b/stage4/stage4intro2.css
@@ -10,7 +10,7 @@
 
 /* Set background image for the body */
 body {
-    background-image: url(./assets/cave02-1024x683.png);
+    background-image: url(./../assets/cave02-1024x683.png);
     background-repeat: no-repeat;
     background-size: 100% 100vh;
 }
