--- a/introduction/intropage.css
+++ b/introduction/intropage.css
@@ -71,3 +71,38 @@ button {
 p, img, #message, button {
     visibility: hidden;
 }
+@media screen and (max-width:900px) {
+    body{
+        background-size: 100% 100vh;
+    }
+    #franklin{
+        height: 100px;
+        top: 200px;
+        left: 60px;
+    }
+    p{
+        font-size: 8px;
+        top: 35px;
+        width: 360px;
+        left: 140px;
+    }
+    #message{
+        position: absolute;
+        height: 120px;
+        width: 430px;
+        top: 120px;
+        left: 120px;
+        
+    }
+    button{
+        font-size: 16px;
+        top: 200px;
+        position: absolute;
+        top: 280px;
+        left: 580px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+}
