--- a/stage1/stage1p.css
+++ b/stage1/stage1p.css
@@ -73,3 +73,44 @@ button {
 p, img, #message, button {
     visibility: hidden;
 }
+@media screen and (max-width:900px) {
+    body{
+        background-size: 100% 100vh;
+    }
+    p{
+        font-size: 8px;
+        width: 170px;
+        position: absolute;
+        top: 140px;
+        left: 170px;
+        height: 100px;
+        line-height: 10px;
+    }
+    #message{
+        position: absolute;
+        height: 80px;
+        width: 220px;
+        margin-top: 150px;
+        left: 140px;
+        
+    }
+    #franklin{
+        position: absolute;
+        height: 100px;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+    button{
+        font-size: 16px;
+        position: absolute;
+            /* top: 0px;
+            top: 0px;
+            margin-left: 550px; */
+            margin-top: -20px;
+            left: 550px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+}
