--- a/stage3/stage3p.css
+++ b/stage3/stage3p.css
@@ -69,3 +69,78 @@ button {
     font-size: 30px;
     font-family: 'Anton', sans-serif;
 }
+@media screen and (max-width:900px) {
+    body{
+        background-size: 100% 100vh;
+    }
+    #franklin{
+        position: absolute;
+        height: 200px;
+        margin-top: 130px;
+        margin-left: 150px;
+    }
+    p{
+        font-size: 8px;
+        top: 100px;
+        width: 400px;
+        left: 230px;
+    }
+    #message{
+        position: absolute;
+        height: 80px;
+        width: 370px;
+        top: 70px;
+        left: 200px;
+        
+    }
+    button{
+        font-size: 16px;
+        top: 0px;
+        position: absolute;
+        top: 0px;
+        margin-left: 550px;
+        margin-top: 270px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+}
+@media screen and (max-width:900px) {
+    body{
+        background-size: 100% 100vh;
+    }
+    img{
+        position: absolute;
+        height: 150px;
+        margin-top: -75px;
+        margin-left: -60px;
+    }
+    p{
+        font-size: 8px;
+        top: 90px;
+        width: 300px;
+        left: 230px;
+    }
+    #container{
+        position: absolute;
+        height: 60px;
+        width: 370px;
+        top: 70px;
+        left: 200px;
+        
+    }
+    button{
+        font-size: 16px;
+        top: 0px;
+        position: absolute;
+        top: 0px;
+        margin-left: 550px;
+        margin-top: 270px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+
+}
