--- a/stage2/stage2intro.css
+++ b/stage2/stage2intro.css
@@ -71,3 +71,40 @@ button:hover{
 p, img, #container, button{
     visibility: hidden;
 }
+@media screen and (max-width:900px) {
+    body{
+        background-size: 100% 100vh;
+    }
+    #frank{
+        position: absolute;
+        height: 100px;
+        margin-top: 2px;
+        margin-left: 10px;
+    }
+    p{
+        font-size: 8px;
+        top: 110px;
+        width: 370px;
+        left: 290px;
+    }
+    #container{
+        position: absolute;
+        height: 100px;
+        width: 230px;
+        top: 80px;
+        left: 250px;
+        
+    }
+    button{
+        font-size: 16px;
+        top: 0px;
+        position: absolute;
+        top: 0px;
+        margin-left: 50px;
+        margin-top: 270px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+}
