--- a/stage2/stage2p.css
+++ b/stage2/stage2p.css
@@ -77,3 +77,51 @@ button {
     left: 760px;
     visibility: hidden;
 }
+@media screen and (max-width:900px) {
+    body{
+        background-size: 100% 100vh;
+    }
+    p{
+        font-size: 8px;
+        width: 370px;
+        position: absolute;
+        top: 100px;
+        left: 270px;
+        height: 100px;
+        line-height: 10px;
+    }
+    #message{
+        position: absolute;
+        height: 80px;
+        width: 400px;
+        margin-top: -20px;
+        left: 240px;
+        
+    }
+    #franklin{
+        position: absolute;
+        height: 100px;
+        margin-top: 140px;
+        margin-left: 210px;
+    }
+    button{
+        font-size: 16px;
+        position: absolute;
+            /* top: 0px;
+            top: 0px;
+            margin-left: 550px; */
+        top: 100px;
+        left: -550px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+    #map{
+        position: absolute;
+        top: 200px;
+        left: 400px;
+        height: 30px;
+        width: 60px;
+    }
+}
