--- a/stage2/stage2ta.css
+++ b/stage2/stage2ta.css
@@ -68,3 +68,40 @@ button {
     margin-left: 470px;
     margin-top: 250px;
 }
+@media screen and (max-width:900px) {
+    body{
+        background-size: 100% 100vh;
+    }
+    #franklin{
+        position: absolute;
+        height: 100px;
+        margin-top: 125px;
+        margin-left: 200px;
+    }
+    p{
+        font-size: 8px;
+        top: 105px;
+        width: 370px;
+        left: 280px;
+    }
+    #message{
+        position: absolute;
+        height: 80px;
+        width: 360px;
+        top: 80px;
+        left: 250px;
+        
+    }
+    button{
+        font-size: 16px;
+        top: 0px;
+        position: absolute;
+        top: 0px;
+        margin-left: 550px;
+        margin-top: 270px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+}
