--- a/stage3/stage3.css
+++ b/stage3/stage3.css
@@ -82,3 +82,51 @@ button {
     font-size: 30px;
     font-family: 'Anton', sans-serif;
 }
+@media screen and (max-width:900px) {
+    body{
+        background-size: 100% 100vh;
+    }
+    img{
+        position: absolute;
+        height: 200px;
+        margin-top: -75px;
+        margin-left: -100px;
+    }
+    p{
+        font-size: 8px;
+        top: 90px;
+        width: 300px;
+        left: 230px;
+    }
+    #container{
+        position: absolute;
+        height: 80px;
+        width: 370px;
+        top: 70px;
+        left: 200px;
+        
+    }
+    button{
+        font-size: 16px;
+        top: 0px;
+        position: absolute;
+        top: 0px;
+        margin-left: 550px;
+        margin-top: 270px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+    #answer{
+        margin-left: -470px;
+        /* margin-top: 100px; */
+        position:absolute;
+        top: 220px;
+        width: 100px;
+        height: 30px;
+        text-align: center;
+        font-size: 8px;
+    }
+}
+
