--- a/stage4/stage4.css
+++ b/stage4/stage4.css
@@ -8,32 +8,37 @@ body{
     background-size: 100% 100vh;
     background-repeat: no-repeat;
 }
-.grid{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    gap: 15px; /* You can adjust the gap as needed */
-    width: 250px; /* Set a fixed width for the grid */
-    height: 250px; /* Set a fixed height for the grid */
-    margin: 0 auto; /* Horizontal centering */
-    position: absolute;
-    left: 550px;
-    top: 200px;
-}
-.tile{
-    background-color: red;
-    width: 70px;
-    height: 70px;
-    border-radius: 10px;
-    border: 1px groove white;
-
-}
-p{
-    color: white;
-    font-family: 'Anton',sans-serif;
-    font-size: 50px;
-    margin-left: 1380px;
-    margin-right: 20px;
-    margin-top: 30px;
-
+@media screen and (max-width: 900px) {
+    oody{
+        background-size: 100% 100vh;
+    }
+    .grid{
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        gap: 5px; /* You can adjust the gap as needed */
+        width: 50px; /* Set a fixed width for the grid */
+        height: 50px; /* Set a fixed height for the grid */
+        margin: 0 auto; /* Horizontal centering */
+        position: absolute;
+        left: 270px;
+        top: 100px;
+    }
+    .tile{
+        background-color: red;
+        width: 30px;
+        height: 30px;
+        border-radius: 5px;
+        border: 1px groove white;
+    
+    }
+    p{
+        color: white;
+        font-family: 'Anton',sans-serif;
+        font-size: 30px;
+        margin-left: 580px;
+        margin-right: 20px;
+        margin-top: 30px;
+     }
+    
 }
