--- a/stage4/stage4intro2.css
+++ b/stage4/stage4intro2.css
@@ -67,3 +67,41 @@ button {
     font-size: 25px;
     font-family: 'Anton', sans-serif;
 }
+@media screen and (max-width:900px) {
+    body{
+        background-size: 100% 100vh;
+    }
+    img{
+        position: absolute;
+        height: 250px;
+        margin-top: -75px;
+        margin-left: -60px;
+    }
+    p{
+        font-size: 8px;
+        top: 90px;
+        width: 300px;
+        left: 320px;
+    }
+    #container{
+        position: absolute;
+        height: 100px;
+        width: 370px;
+        top: 70px;
+        left: 280px;
+        
+    }
+    button{
+        font-size: 16px;
+        top: 0px;
+        position: absolute;
+        top: 0px;
+        margin-left: 550px;
+        margin-top: 270px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+
+}
