--- a/stage4/stage4ta.css
+++ b/stage4/stage4ta.css
@@ -47,3 +47,21 @@ p{
     font-size: 50px;
     margin-top: 100px;
 }
+@media screen and (max-width: 900px) {
+    p{
+        font-size: 40px;
+        margin-top: 50px;
+    }
+    button{
+        font-size: 16px;
+        top: 0px;
+        position: absolute;
+        top: 0px;
+        margin-left: 0px;
+        margin-top: 270px;
+        background-color: red; /* Change background color */
+        box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
+        height: 50px;
+        width: 100px;
+    }
+}
