--- a/stage1/stage1.css
+++ b/stage1/stage1.css
@@ -102,6 +102,7 @@ button:hover {
         left: 400px;
         height: 300px;
         line-height: 10px;
+        height: 100px;
     }
     #container{
         position: absolute;
@@ -132,6 +133,16 @@ button:hover {
         box-shadow: 2px 6px 5px 0px black; /* Add a shadow effect */
         height: 50px;
         width: 100px;
+    }
+    /* #answerForm{
+        width: 0px;
+        height: 0px;
+        margin-top: 0px;
+
+    } */
+    #challenge{
+        width: 400px;
+        height: 0px;
     }
 }
 
