--- a/stage4/stage4.css
+++ b/stage4/stage4.css
@@ -8,6 +8,36 @@ body{
     background-size: 100% 100vh;
     background-repeat: no-repeat;
 }
+.grid{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 15px; /* You can adjust the gap as needed */
+    width: 70px; /* Set a fixed width for the grid */
+    height: 70px; /* Set a fixed height for the grid */
+    margin: 0 auto; /* Horizontal centering */
+    position: absolute;
+    left: 570px;
+    top: 200px;
+}
+.tile{
+    background-color: red;
+    width: 70px;
+    height: 70px;
+    border-radius: 15px;
+    border: 1px groove white;
+
+}
+p{
+    color: white;
+    font-family: 'Anton',sans-serif;
+    font-size: 50px;
+    margin-left: 1380px;
+    margin-right: 20px;
+    margin-top: 30px;
+ }
+
+
 @media screen and (max-width: 900px) {
     oody{
         background-size: 100% 100vh;
